--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Meine Website
-description: Eine einfache GitHub Pages Seite mit Jekyll
-theme: jekyll-theme-minimal
+title: Nina Wade
+description: 
+theme: 
 
 # Navigationseinträge
 nav:
